--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
   padding: 0px 1.5rem 2px 1.5rem;
   width: 100%;
 }
